--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "workbox-webpack-plugin": "^6.0.2",
     "write-file-webpack-plugin": "^4.5.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
